--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello, world!  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <script>
+        setInterval(function (){
+            window.location="/templates/masita.html";
+        }, 3000);
+    </script>
+
+    <div class="mx-auto" style="width: 200px;">
+        <img src="https://res.cloudinary.com/masita/image/upload/v1647053416/project%200/cargando_td87op.gif" alt="cargando">
+    </div>
+</body>
+</html>
