--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <script>
         setInterval(function (){
-            window.location="/templates/masita.html";
+            window.location="cs50w-project0/templates/masita.html";
         }, 3000);
     </script>
 
